--- a/ui/src/app/job/job.component.html
+++ b/ui/src/app/job/job.component.html
@@ -1,15 +1,30 @@
 <h2>New job form</h2>
 <form #jobForm="ngForm" (ngSubmit)="createJob(jobForm)">
   <label for="engineer">Engineer</label>
-  <select name="engineer" required #engineer="ngModel" ngModel placeholder="Please select" [(ngModel)]="newJob.engineer">
+  <select name="engineer" required #engineer="ngModel" ngModel placeholder="Please select"
+    [(ngModel)]="newJob.engineer">
     <option [ngValue]="undefined" selected>Please select</option>
-    <option *ngFor="let engineer of engineers">{{engineer}}</option>
+    <option *ngFor="let engineer of engineers$ | async ">{{engineer}}</option>
   </select>
   <small *ngIf="engineer.invalid">Please select an engineer</small>
+
   <label for="when">When</label>
   <input type="date" name="when" ngModel required #when="ngModel" [(ngModel)]="newJob.when" />
   <small *ngIf="when.invalid">Please select a valid date</small>
+
+  <label for="customer">Customer</label>
+  <select name="customer" required #customer="ngModel" ngModel placeholder="Please select"
+    [(ngModel)]="newJob.customer">
+    <option [ngValue]="null" selected>Please select</option>
+    <ng-container *ngFor="let customer of customers$ | async ">
+      <option [ngValue]="customer">{{customer.name}}</option>
+    </ng-container>
+    <!-- <option [ngValue]="customer" *ngFor="let customer of customers$ | async ">{{customer.name}}</option> -->
+  </select>
+  <small *ngIf="customer.invalid">Please select a customer</small>
+
   <button type="submit" [disabled]="jobForm.invalid">Add Job</button>
+
 </form>
 
 <h2>Jobs list</h2>
@@ -18,6 +33,7 @@
     <tr>
       <th>Engineer</th>
       <th>When</th>
+      <th>Customer</th>
       <th></th>
     </tr>
   </thead>
@@ -25,6 +41,15 @@
     <tr *ngFor="let job of jobs">
       <td>{{job.engineer}}</td>
       <td>{{job.when | date:'shortDate'}}</td>
+
+      <!-- display customer Unknown if there is no customer assign to the Job -->
+      <td>{{ 
+        (job.customer && job.customer.name) 
+          ? job.customer.name 
+          : 'Unknown'
+         }}
+      </td>
+
       <td>
         <a [routerLink]="['/job', job.jobId]">Open</a>
       </td>
